--- a/00_orientation/helloWorld.ipynb
+++ b/00_orientation/helloWorld.ipynb
@@ -6,18 +6,16 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m'Python 3.12.7' でセルを実行するには、 ipykernel パッケージが必要です。\n",
-      "\u001b[1;31m次のコマンドを実行して、'ipykernel' を Python 環境にインストールします。\n",
-      "\u001b[1;31mコマンド: 'c:/Users/myumy/AppData/Local/Programs/Python/Python312/python.exe -m pip install ipykernel -U --user --force-reinstall'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello! World!\n"
      ]
     }
    ],
    "source": [
-    "print(\"Hello! World!\")"
+    "print(\"Hello! World!\")\n",
+    "print(\"こんにちは！ 世界！\")"
    ]
   }
  ],
@@ -28,7 +26,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.7"
   }
  },
