開発メッセージを追加

--- a/00_orientation/helloWorld.ipynb
+++ b/00_orientation/helloWorld.ipynb
@@ -10,14 +10,26 @@
      "output_type": "stream",
      "text": [
       "Hello! World!\n",
-      "こんにちは！ 世界！\n"
+      "こんにちは！ 世界！\n",
+      "こんにちは！ 世界！\n",
+      "開発を行います\n"
      ]
     }
    ],
    "source": [
     "print(\"Hello! World!\")\n",
     "print(\"こんにちは！ 世界！\")\n",
-    "print(\"こんにちは！ 世界！\")"
+    "print(\"こんにちは！ 世界！\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('開発を行います')"
    ]
   }
  ],
